--- a/environment.yml
+++ b/environment.yml
@@ -116,7 +116,7 @@ dependencies:
       - nvidia-cublas-cu11==11.11.3.6
       - nvidia-cudnn-cu11==8.6.0.163
       - oauthlib==3.2.2
-      - opencv-python==4.7.0.72
+      - opencv-python-headless==4.7.0.72
       - opt-einsum==3.3.0
       - pandas==1.5.3
       - patsy==0.5.3
